# StudyC

./: .gitignore  CMakeLists.txt
Digit/: Digit.cpp  Digit.h
Guess/: CMakeLists.txt  Guess.cpp  Guess.h
JCAVA/: JCAVA.cpp  JCAVA.h
Prime/: Prime.cpp  Prime.h
String/: String.cpp  String.h
src/AlgorithmCustomVersion/: AlgorithmCustomVersion.cpp
src/BoxPrint/: BoxPrint.cpp
src/CheckName/: CheckName.cpp
src/Digit/: Digit.cpp
src/DotProduct/: DotProduct.cpp
src/ElMax&MinVal/: ElMax&MinVal.cpp
src/EqualSequences/: EqualSequences.cpp
src/FindingTheLongestString/: FindingTheLongestString.cpp
src/Greatest/: Greatest.cpp  MyGreatest.cpp
src/Guess/: Guess.cpp
src/IratingOver/: IratingOver.cpp
src/IteratingOver/: IteratingOver.cpp
src/MinMaxSwapped/: MinMaxSwapped.cpp  test.cpp
src/ModificationOfElements/: ModificationOfElements.cpp
src/NaturalSorting/: NaturalSorting.cpp  NaturalSortingClass.cpp
src/Palindromes/: Palindromes.cpp
src/PassByRevVsPassByVal/: Main.cpp
src/Practice/: ShortTest1.cpp  SumOfTwo.cpp
src/Prime/: Prime.cpp
src/ReducingAdjacentWhitespaceCharacters/: ReducingAdjacentWhitespaceCharacters.cpp
src/RefactoringWithLAndA/: RefactoringWithLAndA.cpp
src/RemovingDuplicates/: RemovingDuplicates.cpp
src/ReverseWords/: ReverseWords.cpp
src/SortingBiggerHalf/: SortingBiggerHalf.cpp
src/String/: String.cpp
src/Sum of two numbers/: Sum of two numbers.cpp
src/SumOfTwoNumbers/: SumOfTwoNumbers.cpp
src/Test/: Test.cpp  test1.cpp
src/TextFormatting/: TextFormatting.cpp
src/boxPrint/: boxPrint.cpp
src/test2/: testik.cpp
